build/my_build_log.txt
[ 12%] Built target shaders_spirv
[ 14%] Building CXX object CMakeFiles/sisterapp.dir/src/core/application.cpp.o
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:4:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.h:7:7: error: redefinition of ‘class terrain::TerrainGenerator’
    7 | class TerrainGenerator {
      |       ^~~~~~~~~~~~~~~~
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.h:21,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../terrain/terrain_generator.h:7:7: note: previous definition of ‘class terrain::TerrainGenerator’
    7 | class TerrainGenerator {
      |       ^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp: In member function ‘void core::Application::processEvents(double)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:447:91: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  447 |                          float flux = finiteMap_->fluxMap()[hitZ * finiteMap_->getWidth() + hitX];
      |                                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:448:97: warning: conversion to ‘std::vector<int>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  448 |                          int basinID = finiteMap_->watershedMap()[hitZ * finiteMap_->getWidth() + hitX];
      |                                                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:463:60: warning: comparison of integer expressions of different signedness: ‘int’ and ‘size_t’ {aka ‘long unsigned int’} [-Wsign-compare]
  463 |                                  if (vegIdx >= 0 && vegIdx < veg->getSize()) {
      |                                                     ~~~~~~~^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:464:66: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  464 |                                      float ei = veg->ei_coverage[vegIdx];
      |                                                                  ^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:465:66: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  465 |                                      float es = veg->es_coverage[vegIdx];
      |                                                                  ^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:466:66: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  466 |                                      float vigor = veg->ei_vigor[vegIdx]; // Assuming correlated vigor
      |                                                                  ^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp: In member function ‘void core::Application::update(double)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:650:27: warning: conversion from ‘Uint32’ {aka ‘unsigned int’} to ‘float’ may change value [-Wconversion]
  650 |             float dtSim = vegetationUpdateIntervalMs_ / 1000.0f;
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.cpp:655:37: warning: conversion from ‘int’ to ‘float’ changes value from ‘2147483647’ to ‘2.14748365e+9f’ [-Wfloat-conversion]
  655 |                 if ((float)rand() / RAND_MAX < prob) {
      |                                     ^~~~~~~~
make[2]: *** [CMakeFiles/sisterapp.dir/build.make:191: CMakeFiles/sisterapp.dir/src/core/application.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
